Push footer to bottom

--- a/Landing.html
+++ b/Landing.html
@@ -7,15 +7,30 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <div class="X">
-        <div class="X1">1X</div>
-        <div class="X1">2</div>
-        <div class="X1">3</div>
-        <div class="X1">4</div>
-        <div class="X1">5</div>
-        <div class="X1">
-            <div> Odin Project </div>
+    <div class="Blue">
+    <header>
+        <div class="Left">Header Logo</div>
+        <div class="allright">
+            <div class="Right">header link one</div>
+            <div class="Right">header link two</div>
+            <div class="Right">header link three</div>
         </div>
+    </header>
+    <div class="bottomHeader">
+        <div class="bottomleft">
+            <div class="awesome">This website is awesome</div>
+            <div class="subtext">Here is some subtext that goes under there is some more text here! </div>
+            <button class="signup">Sign Up</button>
+        </div>
+        <img src="pexels.jpg" alt="warm">
     </div>
+    </div>
+
+    <div class="Random">Random</div>
+    <div class="Inspiring">Inspiring</div>
+    <div class="Call">Call</div>
+    <footer>
+        <h2>Copyright @ The Odin Project 2021</h2>
+    </footer>
 </body>
 </html>
