--- a/Landing.html
+++ b/Landing.html
@@ -26,7 +26,36 @@
     </div>
     </div>
 
-    <div class="Random">Random</div>
+    <div class="Random"></div>
+        <div class="info">Some Random Information</div>
+        <div class="boxes">
+            <div class="box1">
+                <img src="pexels.jpg" class="img2" alt="warm">
+                <h2> text added here </h2>
+            </div>
+            <div class="box2">
+                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+            </div>
+            <div class="box3">
+                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+            </div>
+            <div class="box4">
+                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+            </div>
+
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+
     <div class="Inspiring">Inspiring</div>
     <div class="Call">Call</div>
     <footer>
