Fill landing page bottom

--- a/Landing.html
+++ b/Landing.html
@@ -30,36 +30,46 @@
         <div class="info">Some Random Information</div>
         <div class="boxes">
             <div class="box1">
-                <img src="pexels.jpg" class="img2" alt="warm">
-                <h2> text added here </h2>
+                <img src="slide.jpeg" class="img2" alt="warm">
+                <h2> this is subtext under this picture here </h2>
             </div>
             <div class="box2">
-                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+                <img src="slide.jpeg" class="img2" alt="warm">                
+                <h2> this is subtext under this picture here  </h2>
             </div>
             <div class="box3">
-                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+                <img src="slide.jpeg" class="img2" alt="warm">               
+                 <h2> this is subtext under this picture here </h2>
             </div>
             <div class="box4">
-                <img src="pexels.jpg" class="img2" alt="warm">                <h2> text added here </h2>
+                <img src="slide.jpeg" class="img2" alt="warm">                
+                <h2> this is subtext under this picture here </h2>
             </div>
-
-
-
-
-
-
-
-
         </div>
 
+    <div class="Inspiring">
+        <div class="quote">"Inspiring quote from a person so inspiring look how much text there is wow look more text wrap wrap wrap wrap"</div>
+        <div class="gandhi">-Gandhi</div>
+    </div>
+    <div class="Call">
+        <div class="leftcall">
+            <div class="text2">This is the text on the top!</div>
+            <div class="text3">This is the text bottom! </div>
+        </div>
+        <button class="rightcall"> Sign Up </button>
+            
+    </div>
 
 
 
 
-    <div class="Inspiring">Inspiring</div>
-    <div class="Call">Call</div>
+
+
+
+
+
     <footer>
-        <h2>Copyright @ The Odin Project 2021</h2>
+        <h3>Copyright @ The Odin Project 2021</h2>
     </footer>
 </body>
 </html>
